News UAT/force-app/main/default/objects/DNC_Settings__c/DNC_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These custom settings contain the parameters that&#39;ll be used by the DNC (Do Not Call) Register jobs</description>
    <label>DNC Job Settings</label>
</CustomObject>