News UAT/force-app/main/default/objects/DNC_Settings__c/fields/Delete_Window__c.field-meta.xml
<CustomField>
    <fullName>Delete_Window__c</fullName>
    <description>This parameters specifies (in number of days) the maximum age of the DNC entries. The delete process will remove any records in the DNC register that&#39;s older than the value specified in this parameter</description>
    <label>Delete Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>