News UAT/force-app/main/default/objects/DNC_Settings__c/fields/Extract_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Extract_Scope_Size__c</fullName>
    <description>This parameter determines how many records in the scope are passed to the DNC extract process</description>
    <label>Extract Scope Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>