News UAT/force-app/main/default/objects/DNC_Settings__c/fields/Update_Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Update_Scope_Size__c</fullName>
    <description>This parameter determines how many records in the scope are passed to the DNC update process</description>
    <label>Update Scope Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>